--- a/pythonclub/club/templates/base.html
+++ b/pythonclub/club/templates/base.html
@@ -15,9 +15,9 @@
 <div class="navbar-header"> 
 <a class="navbar-brand" href="{% url 'index' %}">Python Club</a> 
 </div> 
-<ul class="nav navbar-nav"> 
+<ul class="nav navbar-nav">
+<li><a href="{% url 'meetings' %}">Meetings</a></li> 
 <li><a href="{% url 'resources' %}">Resources</a></li>
-<li>Dummy</li> 
 </ul> 
 </div> 
 </nav> 
